Back-End/treafik/traefik-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentication-service
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/api/auth/`)
      kind: Rule
      services:
        - name: authentication-service
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: post-service
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/api/posts/`)
      kind: Rule
      services:
        - name: post-service
          port: 80
